fixing overflow x issue

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -529,6 +529,7 @@
 
 body {
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 h2 {
